Add code comments and timezone env wiring

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - .env
     environment:
       - DATABASE_PATH=/app/data/banja.db
+      - TZ=${BOT_TIMEZONE:-Europe/Moscow}
     command: sh -c "pip install --no-cache-dir -r requirements.txt && python banjka_overlord_bot.py"
 
 volumes:
